--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,13 +7,23 @@ on:
 jobs:
   build-push:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
       - run: ./gradlew bootJar --no-daemon
+
       - uses: docker/build-push-action@v5
         with:
           context: .
