refactor: UserService에 있던 refresh token 재발급 로직 분리 및 구조 개선
- TokenController, TokenService, TokenServiceImpl 신규 생성
- JwtAuthenticationFilter에서 refresh token 검증 로직 정리
- UserService 내 불필요한 코드  제거
- .gitattributes EOL 정책 업데이트

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,16 @@
+# gradlew 스크립트 Unix
 /gradlew text eol=lf
+
+# Windows .bat CRLF
 *.bat text eol=crlf
+
+# jar 바이너리 파일
 *.jar binary
+
+# Java LF
+*.java text eol=lf
+
+# Markdown, YAML LF
+*.md text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
